--- a/index.html
+++ b/index.html
@@ -4,9 +4,212 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tea house</title>
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- tailwind css -->
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- main style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+<body class="manrope-font">
+    <header>
+        <div class="banner flex flex-col md:flex-row gap-3 max-w-[1240px] mx-auto">
+           <div>
+                <h1 class="text-[75px] font-bold">It's good <br> tea time at The <br> Tea House</h1>
+                <p class="text-lg my-10">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
+                <button class="w-[200px] h-[64px] bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-lg">Explore More <span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
+            </div>
+            <div class="relative">
+                <img src="images/banner.png" class="relative top-[90px]" alt="">
+                <div class="bg-white flex items-center gap-5 w-[255px] h-[110px] shadow-lg absolute left-[80px] bottom-0 rounded-lg">
+                    <span class="text-4xl text-yellow-400"><i class="fa-solid fa-star"></i></span>
+                    <div>
+                        <p class="text-4xl bold">5.00</p>
+                        <p class="">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </header>
+    <!-- main part start here -->
+    <main>
+        <!-- feature section start here -->
+        <section class="mt-20 max-w-[1240px] mx-auto">
+            <h2 class="text-center text-[45px] font-bold">Our Featured Products</h2>
+            <p class="text-[16px] text-[#777777] text-center mx-auto my-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+            <!-- feature container -->
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+                <div class="text-center bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f4] p-4 rounded-lg">
+                    <img src="./images/tea-1.png" alt="" class="mx-auto block">
+                    <h4 class="text-2xl bold">Milk Tea</h4>
+                    <p class="card-description">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="text-center bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f4] p-4 rounded-lg">
+                    <img src="./images/tea-2.png" alt="" class="mx-auto block">
+                    <h4 class="text-2xl bold">Black Tea</h4>
+                    <p class="card-description">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="text-center bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f4] p-4 rounded-lg">
+                    <img src="./images/tea-3.png" alt="" class="mx-auto block">
+                    <h4 class="text-2xl bold">Lemon Tea</h4>
+                    <p class="card-description">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="text-center bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f4] p-4 rounded-lg">
+                    <img src="./images/tea-4.png" alt="" class="mx-auto block">
+                    <h4 class="text-2xl bold">Green Tea</h4>
+                    <p class="card-description">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- great tea section -->
+        <section class="mt-20 max-w-[1240px] mx-auto">
+            <div class="parent flex flex-col md:flex-row gap-10">
+                <div class="left-side grid grid-cols-2 grid-rows-3 gap-3 md:w-1/2 ">
+                    <div class="bg-gradient-to-r from-[#ff0000] to-[#ff8938] opacity-10 rounded-lg"></div>
+                    <div class="row-span-2 bg-[#e6a6231a] flex justify-center items-center rounded-lg"><img src="./images/fresh-1.png" alt=""></div>
+                    <div class="row-span-2 bg-[#5776391a] flex justify-center items-center rounded-lg"><img src="./images/fresh-2.png" alt=""></div>
+                    <div class="bg-gradient-to-r from-[#d9d9d9] to-[#ffffff00] rounded-lg"></div>
+                </div>
+                <div class="right-side md:w-1/2">
+                    <h2 class="text-[45px] font-bold mt-0">Great Tea, Freshly <br> Presented</h2>
+                    <p class="text-[#777777] my-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+
+                    <h4 class="text-xl font-bold">Unique Taste</h4>
+                    <p class="text-[#777777] my-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+
+                    <h4 class="text-xl font-bold">Premium Quality</h4>
+                    <p class="text-[#777777] mt-3">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- client section start -->
+        <section class="max-w-[1240px] mx-auto mt-20 h-[1000px] md:h-[600px] flex flex-col md:flex-row gap-4 p-5 bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-lg">
+            <!-- left div -->
+            <div class="left_div bg-[url(./images/bg_cup.png)] bg-no-repeat bg-bottom w-full md:w-1/2 flex justify-center items-center text-white">
+                <!-- align items center div -->
+                <div>
+                    <h2 class="text-[45px] font-bold">Meet Our Super<br> Clients</h2>
+                    <p class="mt-7 mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="w-[139px] h-[56px] bg-white text-[#ff0000] text-lg font-semibold rounded-lg">Show All</button>
+                </div>
+            </div>
+            <!-- right div -->
+            <div class="right_div w-full md:w-1/2 relative">
+                <!-- review 1 -->
+                <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-6 absolute top-[5vh] md:top-[5%] left-[30%] rounded-lg opacity-15">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="text-xl font-bold mt-5">Ilham Yuda</h4>
+                    <p class="text-[#777777]">Businessman</p>
+
+                    <div class="absolute -top-[30px] -left-[30px] p-1 rounded-full bg-white">
+                        <img src="./images/client.png" alt="">
+                    </div>
+                </div>
+                <!-- review 2 -->
+                <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-6 absolute top-[15vh] md:top-[27%] left-[5%] rounded-lg z-10">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="text-xl font-bold mt-5">Ilham Yuda</h4>
+                    <p class="text-[#777777]">Businessman</p>
+
+                    <div class="absolute -top-[30px] -left-[30px] p-1 rounded-full bg-white">
+                        <img src="./images/client.png" alt="">
+                    </div>
+                    <img src="./images/circles.png" alt="" class="absolute right-4 bottom-4">
+                </div>
+                <!-- review 3 -->
+                <div class="customer_review h-[210px] w-[70vw] md:w-[70%] bg-white p-6 absolute top-[32vh] md:top-[50%] left-[30%] rounded-lg opacity-15">
+                    <p class="text-[#777777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="text-xl font-bold mt-5">Ilham Yuda</h4>
+                    <p class="text-[#777777]">Businessman</p>
+
+                    <div class="absolute -top-[30px] -left-[30px] p-1 rounded-full bg-white">
+                        <img src="./images/client.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- news and event section -->
+        <section class="max-w-[1240px] mx-auto mt-20">
+            <h2 class="text-[45px] text-[#1c1c1c] font-bold text-center">News & Events</h2>
+            <p class="text-[#777777] text-center mx-auto my-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <!-- feature card container -->
+            <div class="flex flex-col md:flex-row gap-5">
+                <div class="border-2 border-slate-300 rounded-lg p-2">
+                   <img src="./images/news-1.png" alt="" class="w-full">
+                   <p class="text-[#777777]">Feb 05, 2027</p>
+                   <h3 class="text-xl text-[#1c1c1c] font-bold my-2">Collecting 8 points for discount</h3>
+                   <p class="text-[#777777] my-2">There are many variations of passages of Lorem Ipsum available.</p>
+                   <h4 class="text-[#1c1c1c] font-bold">Learn More</h4> 
+                </div>
+                <div class="border-2 border-slate-300 rounded-lg p-2">
+                   <img src="./images/news-3.png" alt="" class="w-full">
+                   <p class="text-[#777777]">Feb 05, 2027</p>
+                   <h3 class="text-xl text-[#1c1c1c] font-bold my-2">Collecting 8 points for discount</h3>
+                   <p class="text-[#777777] my-2">There are many variations of passages of Lorem Ipsum available.</p>
+                   <h4 class="text-[#1c1c1c] font-bold">Learn More</h4> 
+                </div>
+                <div class="border-2 border-slate-300 rounded-lg p-2">
+                   <img src="./images/news-3.png" alt="" class="w-full">
+                   <p class="text-[#777777]">Feb 05, 2027</p>
+                   <h3 class="text-xl text-[#1c1c1c] font-bold my-2">Collecting 8 points for discount</h3>
+                   <p class="text-[#777777] my-2">There are many variations of passages of Lorem Ipsum available.</p>
+                   <h4 class="text-[#1c1c1c] font-bold">Learn More</h4> 
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="bg-[#FFE9E7] mt-20 py-20">
+        <div class="footer-parent-div max-w-[1240px] mx-auto">
+            <!-- first-footer-row  -->
+            <div class="logo-parent-div flex justify-between items-center">
+                <img src="./images/cup.png" alt="">
+                <div class="flex items-center">
+                    <p class="mr-10 text-[#494949] text-xl">Ready to get strated?</p>
+                    <button class="w-[164px] h-[56px] bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white rounded-lg">Get Started</button>
+                </div>
+            </div>
+            <!-- second-footer-row -->
+            <div class="mt-10 flex flex-col items-center text-center md:text-left md:flex-row justify-between">
+                <div class="text-[#494949]">
+                    <h4 class="text-xl text-[#1C1C1C] font-semibold">Quick Links</h4>
+                    <p class="mt-2 text-lg">Home</p>
+                    <p class="mt-2 text-lg">About Us</p>
+                    <p class="mt-2 text-lg">Insurance</p>
+                    <p class="mt-2 text-lg">Privacy Policy</p>
+                </div>
+
+                <div class="text-[#494949]">
+                    <h4 class="text-xl text-[#1C1C1C] font-semibold">Our Services</h4>
+                    <p class="mt-2 text-lg">Life Insurance</p>
+                    <p class="mt-2 text-lg">Car Insurance</p>
+                    <p class="mt-2 text-lg">Health Insurance</p>
+                    <p class="mt-2 text-lg">House Insurance</p>
+                </div>
+
+                <div class="text-[#494949]">
+                    <h4 class="text-xl text-[#1C1C1C] font-semibold">Help</h4>
+                    <p class="mt-2 text-lg">FAQs</p>
+                    <p class="mt-2 text-lg">Contact Us</p>
+                </div>
+
+                <div>
+                    <h4 class="text-2xl text-[#1C1C1C] font-semibold">Subscribe to our<br> newsletter</h4>
+                    <input type="email" placeholder="Email address" class="mt-5 border-b-1 border-gray-300 pb-3">
+                    <button class="w-[30px] h-[30px] rounded-full bg-gradient-to-r from-[#FF8938] to-[#FF0000] text-white"><i class="fa-solid fa-angle-right"></i></button>
+                    <!-- social icons -->
+                    <div class="mt-5">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+            </div>
+            <p class="mt-20 text-[#777777] text-base text-center">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
